md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -496,14 +496,24 @@ Well, thanks to our loss function and optimizer, the model's internal parameters
 Let's inspect our model's  [`.state_dict()`](https://pytorch.org/tutorials/recipes/recipes/what_is_state_dict.html)  to see see how close our model gets to the original values we set for weights and bias.
 
 ```py
+# Find our model's learned parameters
+print("The model learned the following values for weights and bias:")
+print(model_0.state_dict())
+print("\nAnd the original values for weights and bias are:")
+print(f"weights: {weight}, bias: {bias}")
+```
+```cpp
+The model learned the following values for weights and bias:
+OrderedDict([('weights', tensor([0.5784])), ('bias', tensor([0.3513]))])
 
-
+And the original values for weights and bias are:
+weights: 0.7, bias: 0.3
 ```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTY2MzA3OTI2MiwxNTU0MTQwNTkxLDE3OD
-E4NTgwMjgsLTU5MjczMDgzOCwtMTQ4MTI0Mzg1NCwtNzc0ODgy
-OTE0LC0xMjUzOTQ2OTE5LDMyNzM1ODEyNSwtNjkxMTAxNjc4LD
-Y2NzY2NTk4OCwxNTYwMTg1NjM1LDE4NjIzMjY3NzAsNzY3ODky
-NjQsLTIxMTE2NjM0MDAsMTY2NTM5NDMxOCwxNTYxMjA2NzQxLC
-05NTIzMzQzMiwtMTY4MTExNzQ4OCw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbLTE0NTkyODc2NTUsMTU1NDE0MDU5MSwxNz
+gxODU4MDI4LC01OTI3MzA4MzgsLTE0ODEyNDM4NTQsLTc3NDg4
+MjkxNCwtMTI1Mzk0NjkxOSwzMjczNTgxMjUsLTY5MTEwMTY3OC
+w2Njc2NjU5ODgsMTU2MDE4NTYzNSwxODYyMzI2NzcwLDc2Nzg5
+MjY0LC0yMTExNjYzNDAwLDE2NjUzOTQzMTgsMTU2MTIwNjc0MS
+wtOTUyMzM0MzIsLTE2ODExMTc0ODgsNzMwOTk4MTE2XX0=
 -->
