md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -512,32 +512,22 @@ weights: 0.7, bias: 0.3
 
 ## 4. Making predictions with a trained PyTorch model (inference)
 
-Once you've trained a model, you'll likely want to make predictions with it.
-
-  
-
-We've already seen a glimpse of this in the training and testing code above, the steps to do it outside of the training/testing loop are similar.
-
-  
+Once you've trained a model, you'll likely want to make predictions with it. We've already seen a glimpse of this in the training and testing code above, the steps to do it outside of the training/testing loop are similar.
 
 There are three things to remember when making predictions (also called performing inference) with a PyTorch model:
-
-  
-
 1. Set the model in evaluation mode (`model.eval()`).
-
 2. Make the predictions using the inference mode context manager (`with torch.inference_mode(): ...`).
-
 3. All predictions should be made with objects on the same device (e.g. data and model on GPU only or data and model on CPU only).
 
-  
-
 The first two items make sure all helpful calculations and settings PyTorch uses behind the scenes during training but aren't necessary for inference are turned off (this results in faster computation). And the third ensures that you won't run into cross-device errors.
+```py
+
+```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDU5NDY0MzUxLDE1NTQxNDA1OTEsMTc4MT
-g1ODAyOCwtNTkyNzMwODM4LC0xNDgxMjQzODU0LC03NzQ4ODI5
-MTQsLTEyNTM5NDY5MTksMzI3MzU4MTI1LC02OTExMDE2NzgsNj
-Y3NjY1OTg4LDE1NjAxODU2MzUsMTg2MjMyNjc3MCw3Njc4OTI2
-NCwtMjExMTY2MzQwMCwxNjY1Mzk0MzE4LDE1NjEyMDY3NDEsLT
-k1MjMzNDMyLC0xNjgxMTE3NDg4LDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbLTc3NTQ3NjA4NiwxNTU0MTQwNTkxLDE3OD
+E4NTgwMjgsLTU5MjczMDgzOCwtMTQ4MTI0Mzg1NCwtNzc0ODgy
+OTE0LC0xMjUzOTQ2OTE5LDMyNzM1ODEyNSwtNjkxMTAxNjc4LD
+Y2NzY2NTk4OCwxNTYwMTg1NjM1LDE4NjIzMjY3NzAsNzY3ODky
+NjQsLTIxMTE2NjM0MDAsMTY2NTM5NDMxOCwxNTYxMjA2NzQxLC
+05NTIzMzQzMiwtMTY4MTExNzQ4OCw3MzA5OTgxMTZdfQ==
 -->
