--- a/md/01.md
+++ b/md/01.md
@@ -521,13 +521,40 @@ There are three things to remember when making predictions (also called performi
 
 The first two items make sure all helpful calculations and settings PyTorch uses behind the scenes during training but aren't necessary for inference are turned off (this results in faster computation). And the third ensures that you won't run into cross-device errors.
 ```py
+# 1. Set the model in evaluation mode
+model_0.eval()
 
+# 2. Setup the inference mode context manager
+with torch.inference_mode():
+  # 3. Make sure the calculations are done with the model and data on the same device
+  # in our case, we haven't setup device-agnostic code yet so our data and model are
+  # on the CPU by default.
+  # model_0.to(device)
+  # X_test = X_test.to(device)
+  y_preds = model_0(X_test)
+y_preds
+```
+```cpp
+tensor([[0.8141],
+        [0.8256],
+        [0.8372],
+        [0.8488],
+        [0.8603],
+        [0.8719],
+        [0.8835],
+        [0.8950],
+        [0.9066],
+        [0.9182]])
+```
+Nice! We've made some predictions with our trained model, now how do they look?
+```py
+plot_predictions(predictions=y_preds)
 ```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc3NTQ3NjA4NiwxNTU0MTQwNTkxLDE3OD
-E4NTgwMjgsLTU5MjczMDgzOCwtMTQ4MTI0Mzg1NCwtNzc0ODgy
-OTE0LC0xMjUzOTQ2OTE5LDMyNzM1ODEyNSwtNjkxMTAxNjc4LD
-Y2NzY2NTk4OCwxNTYwMTg1NjM1LDE4NjIzMjY3NzAsNzY3ODky
-NjQsLTIxMTE2NjM0MDAsMTY2NTM5NDMxOCwxNTYxMjA2NzQxLC
-05NTIzMzQzMiwtMTY4MTExNzQ4OCw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbLTIxMTM1NzMxODIsMTU1NDE0MDU5MSwxNz
+gxODU4MDI4LC01OTI3MzA4MzgsLTE0ODEyNDM4NTQsLTc3NDg4
+MjkxNCwtMTI1Mzk0NjkxOSwzMjczNTgxMjUsLTY5MTEwMTY3OC
+w2Njc2NjU5ODgsMTU2MDE4NTYzNSwxODYyMzI2NzcwLDc2Nzg5
+MjY0LC0yMTExNjYzNDAwLDE2NjUzOTQzMTgsMTU2MTIwNjc0MS
+wtOTUyMzM0MzIsLTE2ODExMTc0ODgsNzMwOTk4MTE2XX0=
 -->
