md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -550,8 +550,10 @@ Nice! We've made some predictions with our trained model, now how do they look?
 ```py
 plot_predictions(predictions=y_preds)
 ```
+<img src="https://i.imgur.com/KaJ5jYG.png">
+Woohoo! Those red dots are looking far closer than they were before!
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIxMTM1NzMxODIsMTU1NDE0MDU5MSwxNz
+eyJoaXN0b3J5IjpbLTE4MDIxMzMwMDAsMTU1NDE0MDU5MSwxNz
 gxODU4MDI4LC01OTI3MzA4MzgsLTE0ODEyNDM4NTQsLTc3NDg4
 MjkxNCwtMTI1Mzk0NjkxOSwzMjczNTgxMjUsLTY5MTEwMTY3OC
 w2Njc2NjU5ODgsMTU2MDE4NTYzNSwxODYyMzI2NzcwLDc2Nzg5
