md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -552,11 +552,22 @@ plot_predictions(predictions=y_preds)
 ```
 <img src="https://i.imgur.com/KaJ5jYG.png">
 Woohoo! Those red dots are looking far closer than they were before!
+
+## 5. Saving and loading a PyTorch model
+
+  
+
+If you've trained a PyTorch model, chances are you'll want to save it and export it somewhere.
+
+As in, you might train it on Google Colab or your local machine with a GPU but you'd like to now export it to some sort of application where others can use it. Or maybe you'd like to save your progress on a model and come back and load it back later.
+
+For saving and loading models in PyTorch, there are three main methods you should be aware of (all of below have been taken from the [PyTorch saving and loading models guide](https://pytorch.org/tutorials/beginner/saving_loading_models.html#saving-loading-model-for-inference)):
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4MDIxMzMwMDAsMTU1NDE0MDU5MSwxNz
-gxODU4MDI4LC01OTI3MzA4MzgsLTE0ODEyNDM4NTQsLTc3NDg4
-MjkxNCwtMTI1Mzk0NjkxOSwzMjczNTgxMjUsLTY5MTEwMTY3OC
-w2Njc2NjU5ODgsMTU2MDE4NTYzNSwxODYyMzI2NzcwLDc2Nzg5
-MjY0LC0yMTExNjYzNDAwLDE2NjUzOTQzMTgsMTU2MTIwNjc0MS
-wtOTUyMzM0MzIsLTE2ODExMTc0ODgsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbLTI2ODkyNDQ0MSwtMTgwMjEzMzAwMCwxNT
+U0MTQwNTkxLDE3ODE4NTgwMjgsLTU5MjczMDgzOCwtMTQ4MTI0
+Mzg1NCwtNzc0ODgyOTE0LC0xMjUzOTQ2OTE5LDMyNzM1ODEyNS
+wtNjkxMTAxNjc4LDY2NzY2NTk4OCwxNTYwMTg1NjM1LDE4NjIz
+MjY3NzAsNzY3ODkyNjQsLTIxMTE2NjM0MDAsMTY2NTM5NDMxOC
+wxNTYxMjA2NzQxLC05NTIzMzQzMiwtMTY4MTExNzQ4OCw3MzA5
+OTgxMTZdfQ==
 -->
