md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -562,12 +562,34 @@ If you've trained a PyTorch model, chances are you'll want to save it and export
 As in, you might train it on Google Colab or your local machine with a GPU but you'd like to now export it to some sort of application where others can use it. Or maybe you'd like to save your progress on a model and come back and load it back later.
 
 For saving and loading models in PyTorch, there are three main methods you should be aware of (all of below have been taken from the [PyTorch saving and loading models guide](https://pytorch.org/tutorials/beginner/saving_loading_models.html#saving-loading-model-for-inference)):
+<table>
+<thead>
+<tr>
+  <th>PyTorch method</th>
+  <th>What does it do?</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+  <td><a href="https://pytorch.org/docs/stable/torch.html?highlight=save#torch.save"><code>torch.save</code></a></td>
+  <td>Saves a serialized object to disk using Python's <a href="https://docs.python.org/3/library/pickle.html"><code>pickle</code></a> utility. Models, tensors and various other Python objects like dictionaries can be saved using <code>torch.save</code>.</td>
+</tr>
+<tr>
+  <td><a href="https://pytorch.org/docs/stable/torch.html?highlight=torch%20load#torch.load"><code>torch.load</code></a></td>
+  <td>Uses <code>pickle</code>'s unpickling features to deserialize and load pickled Python object files (like models, tensors or dictionaries) into memory. You can also set which device to load the object to (CPU, GPU etc).</td>
+</tr>
+<tr>
+  <td><a href="https://pytorch.org/docs/stable/generated/torch.nn.Module.html?highlight=load_state_dict#torch.nn.Module.load_state_dict"><code>torch.nn.Module.load_state_dict</code></a></td>
+  <td>Loads a model's parameter dictionary (<code>model.state_dict()</code>) using a saved <code>state_dict()</code> object.</td>
+</tr>
+</tbody>
+</table>
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTI2ODkyNDQ0MSwtMTgwMjEzMzAwMCwxNT
-U0MTQwNTkxLDE3ODE4NTgwMjgsLTU5MjczMDgzOCwtMTQ4MTI0
-Mzg1NCwtNzc0ODgyOTE0LC0xMjUzOTQ2OTE5LDMyNzM1ODEyNS
-wtNjkxMTAxNjc4LDY2NzY2NTk4OCwxNTYwMTg1NjM1LDE4NjIz
-MjY3NzAsNzY3ODkyNjQsLTIxMTE2NjM0MDAsMTY2NTM5NDMxOC
-wxNTYxMjA2NzQxLC05NTIzMzQzMiwtMTY4MTExNzQ4OCw3MzA5
-OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbMzEzNDE0OTA3LC0yNjg5MjQ0NDEsLTE4MD
+IxMzMwMDAsMTU1NDE0MDU5MSwxNzgxODU4MDI4LC01OTI3MzA4
+MzgsLTE0ODEyNDM4NTQsLTc3NDg4MjkxNCwtMTI1Mzk0NjkxOS
+wzMjczNTgxMjUsLTY5MTEwMTY3OCw2Njc2NjU5ODgsMTU2MDE4
+NTYzNSwxODYyMzI2NzcwLDc2Nzg5MjY0LC0yMTExNjYzNDAwLD
+E2NjUzOTQzMTgsMTU2MTIwNjc0MSwtOTUyMzM0MzIsLTE2ODEx
+MTc0ODhdfQ==
 -->
