md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -584,12 +584,27 @@ For saving and loading models in PyTorch, there are three main methods you shoul
 </tr>
 </tbody>
 </table>
+
+### Saving a PyTorch model's `state_dict()`
+
+The [recommended way](https://pytorch.org/tutorials/beginner/saving_loading_models.html#saving-loading-model-for-inference) for saving and loading a model for inference (making predictions) is by saving and loading a model's `state_dict()`.
+Let's see how we can do that in a few steps:
+
+1. We'll create a directory for saving models to called `models` using Python's `pathlib` module.
+
+2. We'll create a file path to save the model to.
+
+3. We'll call `torch.save(obj, f)` where `obj` is the target model's `state_dict()` and `f` is the filename of where to save the model.
+
+  
+
+>  **Note:** It's common convention for PyTorch saved models or objects to end with `.pt` or `.pth`, like `saved_model_01.pth`.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzEzNDE0OTA3LC0yNjg5MjQ0NDEsLTE4MD
-IxMzMwMDAsMTU1NDE0MDU5MSwxNzgxODU4MDI4LC01OTI3MzA4
-MzgsLTE0ODEyNDM4NTQsLTc3NDg4MjkxNCwtMTI1Mzk0NjkxOS
-wzMjczNTgxMjUsLTY5MTEwMTY3OCw2Njc2NjU5ODgsMTU2MDE4
-NTYzNSwxODYyMzI2NzcwLDc2Nzg5MjY0LC0yMTExNjYzNDAwLD
-E2NjUzOTQzMTgsMTU2MTIwNjc0MSwtOTUyMzM0MzIsLTE2ODEx
-MTc0ODhdfQ==
+eyJoaXN0b3J5IjpbLTE4NDc5ODMwMjIsMzEzNDE0OTA3LC0yNj
+g5MjQ0NDEsLTE4MDIxMzMwMDAsMTU1NDE0MDU5MSwxNzgxODU4
+MDI4LC01OTI3MzA4MzgsLTE0ODEyNDM4NTQsLTc3NDg4MjkxNC
+wtMTI1Mzk0NjkxOSwzMjczNTgxMjUsLTY5MTEwMTY3OCw2Njc2
+NjU5ODgsMTU2MDE4NTYzNSwxODYyMzI2NzcwLDc2Nzg5MjY0LC
+0yMTExNjYzNDAwLDE2NjUzOTQzMTgsMTU2MTIwNjc0MSwtOTUy
+MzM0MzJdfQ==
 -->
