md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -595,12 +595,32 @@ Let's see how we can do that in a few steps:
 3. We'll call `torch.save(obj, f)` where `obj` is the target model's `state_dict()` and `f` is the filename of where to save the model.
 
 >  **Note:** It's common convention for PyTorch saved models or objects to end with `.pt` or `.pth`, like `saved_model_01.pth`.
+
+```py
+from pathlib import Path
+
+# 1. Create models directory 
+MODEL_PATH = Path("models")
+MODEL_PATH.mkdir(parents=True, exist_ok=True)
+
+# 2. Create model save path 
+MODEL_NAME = "01_pytorch_workflow_model_0.pth"
+MODEL_SAVE_PATH = MODEL_PATH / MODEL_NAME
+
+# 3. Save the model state dict 
+print(f"Saving model to: {MODEL_SAVE_PATH}")
+torch.save(obj=model_0.state_dict(), # only saving the state_dict() only saves the models learned parameters
+           f=MODEL_SAVE_PATH) 
+```
+```cpp
+Saving model to: models\01_pytorch_workflow_model_0.pth
+```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwNzk1NTY2OTAsMzEzNDE0OTA3LC0yNj
-g5MjQ0NDEsLTE4MDIxMzMwMDAsMTU1NDE0MDU5MSwxNzgxODU4
-MDI4LC01OTI3MzA4MzgsLTE0ODEyNDM4NTQsLTc3NDg4MjkxNC
-wtMTI1Mzk0NjkxOSwzMjczNTgxMjUsLTY5MTEwMTY3OCw2Njc2
-NjU5ODgsMTU2MDE4NTYzNSwxODYyMzI2NzcwLDc2Nzg5MjY0LC
-0yMTExNjYzNDAwLDE2NjUzOTQzMTgsMTU2MTIwNjc0MSwtOTUy
-MzM0MzJdfQ==
+eyJoaXN0b3J5IjpbMTY0MjU5Njk5OSwtMjA3OTU1NjY5MCwzMT
+M0MTQ5MDcsLTI2ODkyNDQ0MSwtMTgwMjEzMzAwMCwxNTU0MTQw
+NTkxLDE3ODE4NTgwMjgsLTU5MjczMDgzOCwtMTQ4MTI0Mzg1NC
+wtNzc0ODgyOTE0LC0xMjUzOTQ2OTE5LDMyNzM1ODEyNSwtNjkx
+MTAxNjc4LDY2NzY2NTk4OCwxNTYwMTg1NjM1LDE4NjIzMjY3Nz
+AsNzY3ODkyNjQsLTIxMTE2NjM0MDAsMTY2NTM5NDMxOCwxNTYx
+MjA2NzQxXX0=
 -->
