md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -615,12 +615,34 @@ torch.save(obj=model_0.state_dict(), # only saving the state_dict() only saves t
 ```cpp
 Saving model to: models\01_pytorch_workflow_model_0.pth
 ```
+
+### Loading a saved PyTorch model's `state_dict()`
+
+Since we've now got a saved model `state_dict()` at `models/01_pytorch_workflow_model_0.pth` we can now load it in using `torch.nn.Module.load_state_dict(torch.load(f))` where `f` is the filepath of our saved model `state_dict()`.
+
+Why call `torch.load()` inside `torch.nn.Module.load_state_dict()`?
+
+Because we only saved the model's `state_dict()` which is a dictionary of learned parameters and not the *entire* model, we first have to load the `state_dict()` with `torch.load()` and then pass that `state_dict()` to a new instance of our model (which is a subclass of `nn.Module`).
+
+Why not save the entire model?
+
+[Saving the entire model](https://pytorch.org/tutorials/beginner/saving_loading_models.html#save-load-entire-model) rather than just the `state_dict()` is more intuitive, however, to quote the PyTorch documentation (italics are added):
+
+> The disadvantage of this approach *(saving the whole model)* is that the serialized data is bound to the specific classes and the exact directory structure used when the model is saved...
+> 
+> Because of this, your code can break in various ways when used in other projects or after refactors.
+
+So instead, we're using the flexible method of saving and loading just the `state_dict()`, which again is basically a dictionary of model parameters.
+
+  
+
+Let's test it out by created another instance of `LinearRegressionModel()`, which is a subclass of `torch.nn.Module` and will hence have the in-built method `load_state_dict()`.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTY0MjU5Njk5OSwtMjA3OTU1NjY5MCwzMT
-M0MTQ5MDcsLTI2ODkyNDQ0MSwtMTgwMjEzMzAwMCwxNTU0MTQw
-NTkxLDE3ODE4NTgwMjgsLTU5MjczMDgzOCwtMTQ4MTI0Mzg1NC
-wtNzc0ODgyOTE0LC0xMjUzOTQ2OTE5LDMyNzM1ODEyNSwtNjkx
-MTAxNjc4LDY2NzY2NTk4OCwxNTYwMTg1NjM1LDE4NjIzMjY3Nz
-AsNzY3ODkyNjQsLTIxMTE2NjM0MDAsMTY2NTM5NDMxOCwxNTYx
-MjA2NzQxXX0=
+eyJoaXN0b3J5IjpbLTUxNTIxMTE1NCwxNjQyNTk2OTk5LC0yMD
+c5NTU2NjkwLDMxMzQxNDkwNywtMjY4OTI0NDQxLC0xODAyMTMz
+MDAwLDE1NTQxNDA1OTEsMTc4MTg1ODAyOCwtNTkyNzMwODM4LC
+0xNDgxMjQzODU0LC03NzQ4ODI5MTQsLTEyNTM5NDY5MTksMzI3
+MzU4MTI1LC02OTExMDE2NzgsNjY3NjY1OTg4LDE1NjAxODU2Mz
+UsMTg2MjMyNjc3MCw3Njc4OTI2NCwtMjExMTY2MzQwMCwxNjY1
+Mzk0MzE4XX0=
 -->
