md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -634,15 +634,24 @@ Why not save the entire model?
 
 So instead, we're using the flexible method of saving and loading just the `state_dict()`, which again is basically a dictionary of model parameters.
 
-  
+Let's test it out by creating another instance of `LinearRegressionModel()`, which is a subclass of `torch.nn.Module` and will hence have the in-built method `load_state_dict()`.
 
-Let's test it out by created another instance of `LinearRegressionModel()`, which is a subclass of `torch.nn.Module` and will hence have the in-built method `load_state_dict()`.
+```py
+# Instantiate a new instance of our model (this will be instantiated with random weights)
+loaded_model_0 = LinearRegressionModel()
+
+# Load the state_dict of our saved model (this will update the new instance of our model with trained weights)
+loaded_model_0.load_state_dict(torch.load(f=MODEL_SAVE_PATH))
+```
+```cpp
+<All keys matched successfully>
+```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTUxNTIxMTE1NCwxNjQyNTk2OTk5LC0yMD
-c5NTU2NjkwLDMxMzQxNDkwNywtMjY4OTI0NDQxLC0xODAyMTMz
-MDAwLDE1NTQxNDA1OTEsMTc4MTg1ODAyOCwtNTkyNzMwODM4LC
-0xNDgxMjQzODU0LC03NzQ4ODI5MTQsLTEyNTM5NDY5MTksMzI3
-MzU4MTI1LC02OTExMDE2NzgsNjY3NjY1OTg4LDE1NjAxODU2Mz
-UsMTg2MjMyNjc3MCw3Njc4OTI2NCwtMjExMTY2MzQwMCwxNjY1
-Mzk0MzE4XX0=
+eyJoaXN0b3J5IjpbNjc0MTk4MzE5LDE2NDI1OTY5OTksLTIwNz
+k1NTY2OTAsMzEzNDE0OTA3LC0yNjg5MjQ0NDEsLTE4MDIxMzMw
+MDAsMTU1NDE0MDU5MSwxNzgxODU4MDI4LC01OTI3MzA4MzgsLT
+E0ODEyNDM4NTQsLTc3NDg4MjkxNCwtMTI1Mzk0NjkxOSwzMjcz
+NTgxMjUsLTY5MTEwMTY3OCw2Njc2NjU5ODgsMTU2MDE4NTYzNS
+wxODYyMzI2NzcwLDc2Nzg5MjY0LC0yMTExNjYzNDAwLDE2NjUz
+OTQzMThdfQ==
 -->
