md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -646,12 +646,14 @@ loaded_model_0.load_state_dict(torch.load(f=MODEL_SAVE_PATH))
 ```cpp
 <All keys matched successfully>
 ```
+
+Now to test our loaded model, let's perform inference with it (make predictions) on the test data.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjc0MTk4MzE5LDE2NDI1OTY5OTksLTIwNz
-k1NTY2OTAsMzEzNDE0OTA3LC0yNjg5MjQ0NDEsLTE4MDIxMzMw
-MDAsMTU1NDE0MDU5MSwxNzgxODU4MDI4LC01OTI3MzA4MzgsLT
-E0ODEyNDM4NTQsLTc3NDg4MjkxNCwtMTI1Mzk0NjkxOSwzMjcz
-NTgxMjUsLTY5MTEwMTY3OCw2Njc2NjU5ODgsMTU2MDE4NTYzNS
-wxODYyMzI2NzcwLDc2Nzg5MjY0LC0yMTExNjYzNDAwLDE2NjUz
-OTQzMThdfQ==
+eyJoaXN0b3J5IjpbMTMwMDA0NzIxOSwxNjQyNTk2OTk5LC0yMD
+c5NTU2NjkwLDMxMzQxNDkwNywtMjY4OTI0NDQxLC0xODAyMTMz
+MDAwLDE1NTQxNDA1OTEsMTc4MTg1ODAyOCwtNTkyNzMwODM4LC
+0xNDgxMjQzODU0LC03NzQ4ODI5MTQsLTEyNTM5NDY5MTksMzI3
+MzU4MTI1LC02OTExMDE2NzgsNjY3NjY1OTg4LDE1NjAxODU2Mz
+UsMTg2MjMyNjc3MCw3Njc4OTI2NCwtMjExMTY2MzQwMCwxNjY1
+Mzk0MzE4XX0=
 -->
