md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -648,12 +648,22 @@ loaded_model_0.load_state_dict(torch.load(f=MODEL_SAVE_PATH))
 ```
 
 Now to test our loaded model, let's perform inference with it (make predictions) on the test data.
+```py
+# 1. Put the loaded model into evaluation mode
+loaded_model_0.eval()
+
+# 2. Use the inference mode context manager to make predictions
+with torch.inference_mode():
+	loaded_model_preds = loaded_model_0(X_test)  # perform a forward pass on the test data with the loaded model
+```
+  
+Now we've made some predictions with the loaded model, let's see if they're the same as the previous predictions.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTMwMDA0NzIxOSwxNjQyNTk2OTk5LC0yMD
-c5NTU2NjkwLDMxMzQxNDkwNywtMjY4OTI0NDQxLC0xODAyMTMz
-MDAwLDE1NTQxNDA1OTEsMTc4MTg1ODAyOCwtNTkyNzMwODM4LC
-0xNDgxMjQzODU0LC03NzQ4ODI5MTQsLTEyNTM5NDY5MTksMzI3
-MzU4MTI1LC02OTExMDE2NzgsNjY3NjY1OTg4LDE1NjAxODU2Mz
-UsMTg2MjMyNjc3MCw3Njc4OTI2NCwtMjExMTY2MzQwMCwxNjY1
-Mzk0MzE4XX0=
+eyJoaXN0b3J5IjpbLTI0NDA1NzY3MywxMzAwMDQ3MjE5LDE2ND
+I1OTY5OTksLTIwNzk1NTY2OTAsMzEzNDE0OTA3LC0yNjg5MjQ0
+NDEsLTE4MDIxMzMwMDAsMTU1NDE0MDU5MSwxNzgxODU4MDI4LC
+01OTI3MzA4MzgsLTE0ODEyNDM4NTQsLTc3NDg4MjkxNCwtMTI1
+Mzk0NjkxOSwzMjczNTgxMjUsLTY5MTEwMTY3OCw2Njc2NjU5OD
+gsMTU2MDE4NTYzNSwxODYyMzI2NzcwLDc2Nzg5MjY0LC0yMTEx
+NjYzNDAwXX0=
 -->
