md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -658,8 +658,23 @@ with torch.inference_mode():
 ```
   
 Now we've made some predictions with the loaded model, let's see if they're the same as the previous predictions.
+```py
+y_preds == loaded_model_preds
+```
+```cpp
+tensor([[True],
+        [True],
+        [True],
+        [True],
+        [True],
+        [True],
+        [True],
+        [True],
+        [True],
+        [True]])
+```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTI0NDA1NzY3MywxMzAwMDQ3MjE5LDE2ND
+eyJoaXN0b3J5IjpbLTY2MjkwNjA4MywxMzAwMDQ3MjE5LDE2ND
 I1OTY5OTksLTIwNzk1NTY2OTAsMzEzNDE0OTA3LC0yNjg5MjQ0
 NDEsLTE4MDIxMzMwMDAsMTU1NDE0MDU5MSwxNzgxODU4MDI4LC
 01OTI3MzA4MzgsLTE0ODEyNDM4NTQsLTc3NDg4MjkxNCwtMTI1
