--- a/md/01.md
+++ b/md/01.md
@@ -673,12 +673,16 @@ tensor([[True],
         [True],
         [True]])
 ```
+
+## 6. Putting it all together
+[Read here](https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/01_pytorch_workflow.ipynb#scrollTo=Putting_it_all_together)
+---
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTY2MjkwNjA4MywxMzAwMDQ3MjE5LDE2ND
-I1OTY5OTksLTIwNzk1NTY2OTAsMzEzNDE0OTA3LC0yNjg5MjQ0
-NDEsLTE4MDIxMzMwMDAsMTU1NDE0MDU5MSwxNzgxODU4MDI4LC
-01OTI3MzA4MzgsLTE0ODEyNDM4NTQsLTc3NDg4MjkxNCwtMTI1
-Mzk0NjkxOSwzMjczNTgxMjUsLTY5MTEwMTY3OCw2Njc2NjU5OD
-gsMTU2MDE4NTYzNSwxODYyMzI2NzcwLDc2Nzg5MjY0LC0yMTEx
-NjYzNDAwXX0=
+eyJoaXN0b3J5IjpbOTY0NjIwMjEzLC02NjI5MDYwODMsMTMwMD
+A0NzIxOSwxNjQyNTk2OTk5LC0yMDc5NTU2NjkwLDMxMzQxNDkw
+NywtMjY4OTI0NDQxLC0xODAyMTMzMDAwLDE1NTQxNDA1OTEsMT
+c4MTg1ODAyOCwtNTkyNzMwODM4LC0xNDgxMjQzODU0LC03NzQ4
+ODI5MTQsLTEyNTM5NDY5MTksMzI3MzU4MTI1LC02OTExMDE2Nz
+gsNjY3NjY1OTg4LDE1NjAxODU2MzUsMTg2MjMyNjc3MCw3Njc4
+OTI2NF19
 -->
