md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -677,12 +677,16 @@ tensor([[True],
 ## 6. Putting it all together
 [Read here](https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/01_pytorch_workflow.ipynb#scrollTo=Putting_it_all_together)
 ---
+
+### Extra resources:
+* [Gradient descent](https://towardsdatascience.com/gradient-descent-algorithm-a-deep-dive-cf04e8115f21) (recommended)
+* [3B1B playlist on the topic](https://www.youtube.com/playlist?list=PLZHQObOWTQDNU6R1_67000Dx_ZCJB-3pi)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTY0NjIwMjEzLC02NjI5MDYwODMsMTMwMD
-A0NzIxOSwxNjQyNTk2OTk5LC0yMDc5NTU2NjkwLDMxMzQxNDkw
-NywtMjY4OTI0NDQxLC0xODAyMTMzMDAwLDE1NTQxNDA1OTEsMT
-c4MTg1ODAyOCwtNTkyNzMwODM4LC0xNDgxMjQzODU0LC03NzQ4
-ODI5MTQsLTEyNTM5NDY5MTksMzI3MzU4MTI1LC02OTExMDE2Nz
-gsNjY3NjY1OTg4LDE1NjAxODU2MzUsMTg2MjMyNjc3MCw3Njc4
-OTI2NF19
+eyJoaXN0b3J5IjpbLTE1MDUzOTk1OCw5NjQ2MjAyMTMsLTY2Mj
+kwNjA4MywxMzAwMDQ3MjE5LDE2NDI1OTY5OTksLTIwNzk1NTY2
+OTAsMzEzNDE0OTA3LC0yNjg5MjQ0NDEsLTE4MDIxMzMwMDAsMT
+U1NDE0MDU5MSwxNzgxODU4MDI4LC01OTI3MzA4MzgsLTE0ODEy
+NDM4NTQsLTc3NDg4MjkxNCwtMTI1Mzk0NjkxOSwzMjczNTgxMj
+UsLTY5MTEwMTY3OCw2Njc2NjU5ODgsMTU2MDE4NTYzNSwxODYy
+MzI2NzcwXX0=
 -->
