--- a/md/01.md
+++ b/md/01.md
@@ -679,14 +679,14 @@ tensor([[True],
 ---
 
 ### Extra resources:
-* [Gradient descent](https://towardsdatascience.com/gradient-descent-algorithm-a-deep-dive-cf04e8115f21) (recommended)
-* [3B1B playlist on the topic](https://www.youtube.com/playlist?list=PLZHQObOWTQDNU6R1_67000Dx_ZCJB-3pi)
+* [Gradient descent](https://towardsdatascience.com/gradient-descent-algorithm-a-deep-dive-cf04e8115f21) (recommended) and [even more](https://bair.berkeley.edu/blog/2017/08/31/saddle-efficiency/)
+* [3B1B playlist](https://www.youtube.com/playlist?list=PLZHQObOWTQDNU6R1_67000Dx_ZCJB-3pi) on the topic
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1MDUzOTk1OCw5NjQ2MjAyMTMsLTY2Mj
-kwNjA4MywxMzAwMDQ3MjE5LDE2NDI1OTY5OTksLTIwNzk1NTY2
-OTAsMzEzNDE0OTA3LC0yNjg5MjQ0NDEsLTE4MDIxMzMwMDAsMT
-U1NDE0MDU5MSwxNzgxODU4MDI4LC01OTI3MzA4MzgsLTE0ODEy
-NDM4NTQsLTc3NDg4MjkxNCwtMTI1Mzk0NjkxOSwzMjczNTgxMj
-UsLTY5MTEwMTY3OCw2Njc2NjU5ODgsMTU2MDE4NTYzNSwxODYy
-MzI2NzcwXX0=
+eyJoaXN0b3J5IjpbMjA3OTE2MDM5OCwtMTUwNTM5OTU4LDk2ND
+YyMDIxMywtNjYyOTA2MDgzLDEzMDAwNDcyMTksMTY0MjU5Njk5
+OSwtMjA3OTU1NjY5MCwzMTM0MTQ5MDcsLTI2ODkyNDQ0MSwtMT
+gwMjEzMzAwMCwxNTU0MTQwNTkxLDE3ODE4NTgwMjgsLTU5Mjcz
+MDgzOCwtMTQ4MTI0Mzg1NCwtNzc0ODgyOTE0LC0xMjUzOTQ2OT
+E5LDMyNzM1ODEyNSwtNjkxMTAxNjc4LDY2NzY2NTk4OCwxNTYw
+MTg1NjM1XX0=
 -->
